- Update ecdsa_webcrypto_test.json to the latest version - Refactor the code to make it more clear. - The code is able to run on Chrome, Firefox, and Microsoft Edge now. It cannot run on IE because IE only supports older version of Web Crypto API (the 2014's version).
Some notes for MS Edge:
- Doesn't support ECDSA.
- Doesn't support SHA-1.
- For AES-GCM, IV's length must be 96 bits and the message's length and aad's length must be not 0.

-------------
Created by MOE: https://github.com/google/moe
MOE_MIGRATED_REVID=159232933

--- a/javascript/webcryptoapi/WebCryptoAllTest.html
+++ b/javascript/webcryptoapi/WebCryptoAllTest.html
@@ -14,16 +14,17 @@
 // -->
 
 <!DOCTYPE html>
-<title>Unit Tests of Web Crypto APIs for Chrome</title>
+<title>Unit Tests of Web Crypto API</title>
 <script src="../../../../javascript/closure/base.js"></script>
 <script src="../../webcrypto_test_deps-runfiles.js"></script>
 <script>
-  goog.require('wycheproof.Constants');
   goog.require('wycheproof.webcryptoapi.AES-GCM');
-  goog.require('wycheproof.webcryptoapi.RSASSA-PKCS1-V1_5');
   goog.require('wycheproof.webcryptoapi.ECDSA');
+  goog.require('wycheproof.webcryptoapi.RSASSA-PKCS1-V1_5');
+  goog.require('wycheproof.webcryptoapi');
 </script>
 <script>
-  SUPPORTED_ALGORITHMS = wycheproof.Constants.SUPPORTED_ALGORITHMS['chrome'];
+function setUpPage(){
+  wycheproof.webcryptoapi.setupAllTests();
+}
 </script>
-
