--- a/javascript/webcryptoapi/WebCryptoAllTest.html
+++ b/javascript/webcryptoapi/WebCryptoAllTest.html
@@ -18,10 +18,11 @@
 <script src="../../../../javascript/closure/base.js"></script>
 <script src="../../webcrypto_test_deps-runfiles.js"></script>
 <script>
+  goog.require('wycheproof.webcryptoapi');
   goog.require('wycheproof.webcryptoapi.AES-GCM');
   goog.require('wycheproof.webcryptoapi.ECDSA');
+  goog.require('wycheproof.webcryptoapi.RSA-OAED');
   goog.require('wycheproof.webcryptoapi.RSASSA-PKCS1-V1_5');
-  goog.require('wycheproof.webcryptoapi');
 </script>
 <script>
 function setUpPage(){
