--- a/javascript/webcryptoapi/WebCryptoPresubmitTest.html
+++ b/javascript/webcryptoapi/WebCryptoPresubmitTest.html
@@ -21,6 +21,7 @@
   goog.require('wycheproof.webcryptoapi');
   goog.require('wycheproof.webcryptoapi.AES-GCM');
   goog.require('wycheproof.webcryptoapi.ECDSA');
+  goog.require('wycheproof.webcryptoapi.ECDH');
   goog.require('wycheproof.webcryptoapi.RSA-OAED');
   goog.require('wycheproof.webcryptoapi.RSASSA-PKCS1-V1_5');
 </script>
