Testlogs auto-pushed to gh-pages

--- a/testlogs/index.html
+++ b/testlogs/index.html
@@ -1,3 +1,4 @@
 <html><body><ul>
-<li><a href="ConscryptAllTests_1_0_1.txt">ConscryptAllTests_1_0_1.txt (7 failures)</a></li>
+<li><a href="OpenJDKAllTests.txt">OpenJDKAllTests.txt (35 failures)</a></li>
+<li><a href="OpenJDKTest.txt">OpenJDKTest.txt (34 failures)</a></li>
 </ul></body></html>
