Testlogs auto-pushed to gh-pages

--- a/testlogs/index.html
+++ b/testlogs/index.html
@@ -1,3 +1,3 @@
 <html><body><ul>
-<li><a href="ConscryptAllTests_1_0_1.txt">ConscryptAllTests_1_0_1.txt (7 failures)</a></li>
+<li><a href="ConscryptAllTests_1_0_1.txt">ConscryptAllTests_1_0_1.txt ()</a></li>
 </ul></body></html>
