--- a/testlogs/index.html
+++ b/testlogs/index.html
@@ -1,3 +1,3 @@
 <html><body><ul>
-<li><a href="ConscryptAllTests_1_0_1.txt">ConscryptAllTests_1_0_1.txt ()</a></li>
+<li><a href="ConscryptAllTests_1_0_1.txt">ConscryptAllTests_1_0_1.txt (Tests run: 63,  Failures: 3)</a></li>
 </ul></body></html>
