--- a/testlogs/index.html
+++ b/testlogs/index.html
@@ -1,2 +1,12 @@
 <html><body><ul>
+<li><a href="BouncyCastleAllTests_1_55.txt">BouncyCastleAllTests_1_55.txt ()</a></li>
+<li><a href="BouncyCastleTest.txt">BouncyCastleTest.txt (Tests run: 90,  Failures: 7)</a></li>
+<li><a href="ConscryptAllTests_1_0_1.txt">ConscryptAllTests_1_0_1.txt (Tests run: 63,  Failures: 2)</a></li>
+<li><a href="ConscryptAllTests.txt">ConscryptAllTests.txt (Tests run: 69,  Failures: 2)</a></li>
+<li><a href="ConscryptTest.txt">ConscryptTest.txt (Tests run: 67,  Failures: 2)</a></li>
+<li><a href="OpenJDKTest.txt">OpenJDKTest.txt (Tests run: 76,  Failures: 6)</a></li>
+<li><a href="ProviderIndependentTest.txt">ProviderIndependentTest.txt ()</a></li>
+<li><a href="SpongyCastleAllTests_1_51.txt">SpongyCastleAllTests_1_51.txt ()</a></li>
+<li><a href="SpongyCastleAllTests_1_54.txt">SpongyCastleAllTests_1_54.txt (Tests run: 90,  Failures: 21)</a></li>
+<li><a href="SpongyCastleTest.txt">SpongyCastleTest.txt (Tests run: 90,  Failures: 7)</a></li>
 </ul></body></html>
