--- a/testlogs/index.html
+++ b/testlogs/index.html
@@ -6,16 +6,17 @@
 <li><a href="BouncyCastleAllTests_1_53.txt">BouncyCastleAllTests_1_53.txt (Tests run: 96,  Failures: 22)</a></li>
 <li><a href="BouncyCastleAllTests_1_54.txt">BouncyCastleAllTests_1_54.txt (Tests run: 96,  Failures: 21)</a></li>
 <li><a href="BouncyCastleAllTests_1_55.txt">BouncyCastleAllTests_1_55.txt (Tests run: 96,  Failures: 22)</a></li>
-<li><a href="BouncyCastleAllTests_1_56.txt">BouncyCastleAllTests_1_56.txt (Tests run: 96,  Failures: 9)</a></li>
-<li><a href="BouncyCastleAllTests_1_57.txt">BouncyCastleAllTests_1_57.txt (Tests run: 96,  Failures: 7)</a></li>
-<li><a href="BouncyCastleAllTests_1_58.txt">BouncyCastleAllTests_1_58.txt (Tests run: 96,  Failures: 7)</a></li>
-<li><a href="BouncyCastleAllTests_1_59.txt">BouncyCastleAllTests_1_59.txt (Tests run: 96,  Failures: 7)</a></li>
+<li><a href="BouncyCastleAllTests_1_56.txt">BouncyCastleAllTests_1_56.txt (Tests run: 96,  Failures: 6)</a></li>
+<li><a href="BouncyCastleAllTests_1_57.txt">BouncyCastleAllTests_1_57.txt (Tests run: 96,  Failures: 4)</a></li>
+<li><a href="BouncyCastleAllTests_1_58.txt">BouncyCastleAllTests_1_58.txt (Tests run: 96,  Failures: 3)</a></li>
+<li><a href="BouncyCastleAllTests_1_59.txt">BouncyCastleAllTests_1_59.txt (Tests run: 96,  Failures: 3)</a></li>
+<li><a href="BouncyCastleAllTests.txt">BouncyCastleAllTests.txt ()</a></li>
 <li><a href="ConscryptAllTests_1_0_1.txt">ConscryptAllTests_1_0_1.txt (Tests run: 63,  Failures: 2)</a></li>
 <li><a href="SpongyCastleAllTests_1_50.txt">SpongyCastleAllTests_1_50.txt (Tests run: 90,  Failures: 27)</a></li>
 <li><a href="SpongyCastleAllTests_1_51.txt">SpongyCastleAllTests_1_51.txt (Tests run: 90,  Failures: 21)</a></li>
 <li><a href="SpongyCastleAllTests_1_52.txt">SpongyCastleAllTests_1_52.txt (Tests run: 90,  Failures: 22)</a></li>
 <li><a href="SpongyCastleAllTests_1_53.txt">SpongyCastleAllTests_1_53.txt (Tests run: 90,  Failures: 22)</a></li>
 <li><a href="SpongyCastleAllTests_1_54.txt">SpongyCastleAllTests_1_54.txt (Tests run: 90,  Failures: 21)</a></li>
-<li><a href="SpongyCastleAllTests_1_56.txt">SpongyCastleAllTests_1_56.txt (Tests run: 90,  Failures: 9)</a></li>
-<li><a href="SpongyCastleAllTests_1_58.txt">SpongyCastleAllTests_1_58.txt (Tests run: 90,  Failures: 7)</a></li>
+<li><a href="SpongyCastleAllTests_1_56.txt">SpongyCastleAllTests_1_56.txt (Tests run: 90,  Failures: 6)</a></li>
+<li><a href="SpongyCastleAllTests_1_58.txt">SpongyCastleAllTests_1_58.txt (Tests run: 90,  Failures: 3)</a></li>
 </ul></body></html>
