--- a/testlogs/index.html
+++ b/testlogs/index.html
@@ -1,14 +1,14 @@
 <html><body><ul>
-<li><a href="BouncyCastleAllTests_1_49.txt">BouncyCastleAllTests_1_49.txt (Tests run: 95,  Failures: 16)</a></li>
-<li><a href="BouncyCastleAllTests_1_50.txt">BouncyCastleAllTests_1_50.txt (Tests run: 95,  Failures: 22)</a></li>
-<li><a href="BouncyCastleAllTests_1_51.txt">BouncyCastleAllTests_1_51.txt (Tests run: 95,  Failures: 19)</a></li>
-<li><a href="BouncyCastleAllTests_1_52.txt">BouncyCastleAllTests_1_52.txt (Tests run: 95,  Failures: 20)</a></li>
-<li><a href="BouncyCastleAllTests_1_53.txt">BouncyCastleAllTests_1_53.txt (Tests run: 95,  Failures: 20)</a></li>
-<li><a href="BouncyCastleAllTests_1_54.txt">BouncyCastleAllTests_1_54.txt (Tests run: 95,  Failures: 21)</a></li>
-<li><a href="BouncyCastleAllTests_1_55.txt">BouncyCastleAllTests_1_55.txt (Tests run: 95,  Failures: 22)</a></li>
-<li><a href="BouncyCastleAllTests_1_56.txt">BouncyCastleAllTests_1_56.txt (Tests run: 95,  Failures: 6)</a></li>
-<li><a href="BouncyCastleAllTests_1_57.txt">BouncyCastleAllTests_1_57.txt (Tests run: 95,  Failures: 4)</a></li>
-<li><a href="BouncyCastleAllTests_1_58.txt">BouncyCastleAllTests_1_58.txt (Tests run: 96,  Failures: 3)</a></li>
-<li><a href="BouncyCastleAllTests_1_59.txt">BouncyCastleAllTests_1_59.txt (Tests run: 95,  Failures: 3)</a></li>
-<li><a href="ConscryptAllTests_1_0_1.txt">ConscryptAllTests_1_0_1.txt (Tests run: 63,  Failures: 2)</a></li>
+<li><a href="BouncyCastleAllTests_1_49.txt">SpongyCastle/BouncyCastleAllTests_1_49.txt</a>: Tests run: 95,  Failures: 16</li>
+<li><a href="BouncyCastleAllTests_1_50.txt">SpongyCastle/BouncyCastleAllTests_1_50.txt</a>: Tests run: 95,  Failures: 22</li>
+<li><a href="BouncyCastleAllTests_1_51.txt">SpongyCastle/BouncyCastleAllTests_1_51.txt</a>: Tests run: 95,  Failures: 19</li>
+<li><a href="BouncyCastleAllTests_1_52.txt">SpongyCastle/BouncyCastleAllTests_1_52.txt</a>: Tests run: 95,  Failures: 20</li>
+<li><a href="BouncyCastleAllTests_1_53.txt">SpongyCastle/BouncyCastleAllTests_1_53.txt</a>: Tests run: 95,  Failures: 20</li>
+<li><a href="BouncyCastleAllTests_1_54.txt">SpongyCastle/BouncyCastleAllTests_1_54.txt</a>: Tests run: 95,  Failures: 21</li>
+<li><a href="BouncyCastleAllTests_1_55.txt">SpongyCastle/BouncyCastleAllTests_1_55.txt</a>: Tests run: 95,  Failures: 22</li>
+<li><a href="BouncyCastleAllTests_1_56.txt">SpongyCastle/BouncyCastleAllTests_1_56.txt</a>: Tests run: 95,  Failures: 6</li>
+<li><a href="BouncyCastleAllTests_1_57.txt">SpongyCastle/BouncyCastleAllTests_1_57.txt</a>: Tests run: 95,  Failures: 4</li>
+<li><a href="BouncyCastleAllTests_1_58.txt">SpongyCastle/BouncyCastleAllTests_1_58.txt</a>: Tests run: 96,  Failures: 3</li>
+<li><a href="BouncyCastleAllTests_1_59.txt">SpongyCastle/BouncyCastleAllTests_1_59.txt</a>: Tests run: 95,  Failures: 3</li>
+<li><a href="ConscryptAllTests_1_0_1.txt">ConscryptAllTests_1_0_1.txt</a>: Tests run: 63,  Failures: 2</li>
 </ul></body></html>
