Testlogs auto-pushed to gh-pages

--- a/testlogs/index.html
+++ b/testlogs/index.html
@@ -1,14 +1,14 @@
 <html><body><ul>
-<li><a href="BouncyCastleAllTests_1_49.txt">SpongyCastle/BouncyCastleAllTests_1_49.txt</a>: Tests run: 95,  Failures: 16</li>
-<li><a href="BouncyCastleAllTests_1_50.txt">SpongyCastle/BouncyCastleAllTests_1_50.txt</a>: Tests run: 95,  Failures: 22</li>
-<li><a href="BouncyCastleAllTests_1_51.txt">SpongyCastle/BouncyCastleAllTests_1_51.txt</a>: Tests run: 95,  Failures: 19</li>
-<li><a href="BouncyCastleAllTests_1_52.txt">SpongyCastle/BouncyCastleAllTests_1_52.txt</a>: Tests run: 95,  Failures: 20</li>
-<li><a href="BouncyCastleAllTests_1_53.txt">SpongyCastle/BouncyCastleAllTests_1_53.txt</a>: Tests run: 95,  Failures: 20</li>
-<li><a href="BouncyCastleAllTests_1_54.txt">SpongyCastle/BouncyCastleAllTests_1_54.txt</a>: Tests run: 95,  Failures: 21</li>
-<li><a href="BouncyCastleAllTests_1_55.txt">SpongyCastle/BouncyCastleAllTests_1_55.txt</a>: Tests run: 95,  Failures: 22</li>
-<li><a href="BouncyCastleAllTests_1_56.txt">SpongyCastle/BouncyCastleAllTests_1_56.txt</a>: Tests run: 95,  Failures: 6</li>
-<li><a href="BouncyCastleAllTests_1_57.txt">SpongyCastle/BouncyCastleAllTests_1_57.txt</a>: Tests run: 95,  Failures: 4</li>
-<li><a href="BouncyCastleAllTests_1_58.txt">SpongyCastle/BouncyCastleAllTests_1_58.txt</a>: Tests run: 96,  Failures: 3</li>
-<li><a href="BouncyCastleAllTests_1_59.txt">SpongyCastle/BouncyCastleAllTests_1_59.txt</a>: Tests run: 95,  Failures: 3</li>
-<li><a href="ConscryptAllTests_1_0_1.txt">ConscryptAllTests_1_0_1.txt</a>: Tests run: 63,  Failures: 2</li>
+<li><a href="BouncyCastleAllTests_1_49.txt">SpongyCastle/BouncyCastleAllTests_1_49.txt</a>: Tests run: 95,  Failures: 12</li>
+<li><a href="BouncyCastleAllTests_1_50.txt">SpongyCastle/BouncyCastleAllTests_1_50.txt</a>: Tests run: 95,  Failures: 23</li>
+<li><a href="BouncyCastleAllTests_1_51.txt">SpongyCastle/BouncyCastleAllTests_1_51.txt</a>: Tests run: 95,  Failures: 21</li>
+<li><a href="BouncyCastleAllTests_1_52.txt">SpongyCastle/BouncyCastleAllTests_1_52.txt</a>: Tests run: 95,  Failures: 23</li>
+<li><a href="BouncyCastleAllTests_1_53.txt">SpongyCastle/BouncyCastleAllTests_1_53.txt</a>: Tests run: 95,  Failures: 22</li>
+<li><a href="BouncyCastleAllTests_1_54.txt">SpongyCastle/BouncyCastleAllTests_1_54.txt</a>: Tests run: 95,  Failures: 22</li>
+<li><a href="BouncyCastleAllTests_1_55.txt">SpongyCastle/BouncyCastleAllTests_1_55.txt</a>: Tests run: 95,  Failures: 23</li>
+<li><a href="BouncyCastleAllTests_1_56.txt">SpongyCastle/BouncyCastleAllTests_1_56.txt</a>: </li>
+<li><a href="BouncyCastleAllTests_1_57.txt">SpongyCastle/BouncyCastleAllTests_1_57.txt</a>: Tests run: 95,  Failures: 10</li>
+<li><a href="BouncyCastleAllTests_1_58.txt">SpongyCastle/BouncyCastleAllTests_1_58.txt</a>: Tests run: 95,  Failures: 10</li>
+<li><a href="BouncyCastleAllTests_1_59.txt">SpongyCastle/BouncyCastleAllTests_1_59.txt</a>: Tests run: 95,  Failures: 10</li>
+<li><a href="ConscryptAllTests_1_0_1.txt">ConscryptAllTests_1_0_1.txt</a>: Tests run: 63,  Failures: 3</li>
 </ul></body></html>
