--- a/testlogs/index.html
+++ b/testlogs/index.html
@@ -1,1 +1,14 @@
-<html><body><ul><li><a href="./BouncyCastleAllTests_1_49.txt">BouncyCastleAllTests_1_49.txt</a></li><li><a href="./BouncyCastleAllTests_1_50.txt">BouncyCastleAllTests_1_50.txt</a></li><li><a href="./BouncyCastleAllTests_1_51.txt">BouncyCastleAllTests_1_51.txt</a></li><li><a href="./BouncyCastleAllTests_1_52.txt">BouncyCastleAllTests_1_52.txt</a></li><li><a href="./BouncyCastleAllTests_1_53.txt">BouncyCastleAllTests_1_53.txt</a></li><li><a href="./BouncyCastleAllTests_1_54.txt">BouncyCastleAllTests_1_54.txt</a></li><li><a href="./BouncyCastleAllTests_1_55.txt">BouncyCastleAllTests_1_55.txt</a></li><li><a href="./BouncyCastleAllTests_1_56.txt">BouncyCastleAllTests_1_56.txt</a></li><li><a href="./BouncyCastleAllTests_1_57.txt">BouncyCastleAllTests_1_57.txt</a></li><li><a href="./BouncyCastleAllTests_1_58.txt">BouncyCastleAllTests_1_58.txt</a></li><li><a href="./BouncyCastleAllTests_1_59.txt">BouncyCastleAllTests_1_59.txt</a></li><li><a href="./ConscryptAllTests_1_0_1.txt">ConscryptAllTests_1_0_1.txt</a></li></ul></body></html>
+<html><body><ul>
+<li><a href="BouncyCastleAllTests_1_49.txt">SpongyCastle/BouncyCastleAllTests_1_49.txt</a>: Tests run: 95,  Failures: 16</li>
+<li><a href="BouncyCastleAllTests_1_50.txt">SpongyCastle/BouncyCastleAllTests_1_50.txt</a>: Tests run: 95,  Failures: 25</li>
+<li><a href="BouncyCastleAllTests_1_51.txt">SpongyCastle/BouncyCastleAllTests_1_51.txt</a>: Tests run: 95,  Failures: 24</li>
+<li><a href="BouncyCastleAllTests_1_52.txt">SpongyCastle/BouncyCastleAllTests_1_52.txt</a>: Tests run: 95,  Failures: 25</li>
+<li><a href="BouncyCastleAllTests_1_53.txt">SpongyCastle/BouncyCastleAllTests_1_53.txt</a>: Tests run: 95,  Failures: 25</li>
+<li><a href="BouncyCastleAllTests_1_54.txt">SpongyCastle/BouncyCastleAllTests_1_54.txt</a>: Tests run: 95,  Failures: 26</li>
+<li><a href="BouncyCastleAllTests_1_55.txt">SpongyCastle/BouncyCastleAllTests_1_55.txt</a>: Tests run: 95,  Failures: 27</li>
+<li><a href="BouncyCastleAllTests_1_56.txt">SpongyCastle/BouncyCastleAllTests_1_56.txt</a>: Tests run: 95,  Failures: 11</li>
+<li><a href="BouncyCastleAllTests_1_57.txt">SpongyCastle/BouncyCastleAllTests_1_57.txt</a>: Tests run: 95,  Failures: 9</li>
+<li><a href="BouncyCastleAllTests_1_58.txt">SpongyCastle/BouncyCastleAllTests_1_58.txt</a>: Tests run: 95,  Failures: 8</li>
+<li><a href="BouncyCastleAllTests_1_59.txt">SpongyCastle/BouncyCastleAllTests_1_59.txt</a>: Tests run: 95,  Failures: 8</li>
+<li><a href="ConscryptAllTests_1_0_1.txt">ConscryptAllTests_1_0_1.txt</a>: Tests run: 63,  Failures: 3</li>
+</ul></body></html>
