Testlogs auto-pushed to gh-pages

--- a/testlogs/index.html
+++ b/testlogs/index.html
@@ -12,3 +12,38 @@
 <li><a href="BouncyCastleAllTests_1_59.txt">SpongyCastle/BouncyCastleAllTests_1_59.txt</a>: Tests run: 95,  Failures: 8</li>
 <li><a href="ConscryptAllTests_1_0_1.txt">ConscryptAllTests_1_0_1.txt</a>: Tests run: 63,  Failures: 3</li>
 </ul></body></html>
+<html><body><ul>
+<li><a href="BouncyCastleAllTests_1_49.txt">SpongyCastle/BouncyCastleAllTests_1_49.txt</a>: Tests run: 95,  Failures: 16</li>
+<li><a href="BouncyCastleAllTests_1_50.txt">SpongyCastle/BouncyCastleAllTests_1_50.txt</a>: Tests run: 95,  Failures: 25</li>
+<li><a href="BouncyCastleAllTests_1_51.txt">SpongyCastle/BouncyCastleAllTests_1_51.txt</a>: Tests run: 95,  Failures: 24</li>
+<li><a href="BouncyCastleAllTests_1_52.txt">SpongyCastle/BouncyCastleAllTests_1_52.txt</a>: Tests run: 95,  Failures: 25</li>
+<li><a href="BouncyCastleAllTests_1_53.txt">SpongyCastle/BouncyCastleAllTests_1_53.txt</a>: Tests run: 95,  Failures: 25</li>
+<li><a href="BouncyCastleAllTests_1_54.txt">SpongyCastle/BouncyCastleAllTests_1_54.txt</a>: Tests run: 95,  Failures: 26</li>
+<li><a href="BouncyCastleAllTests_1_55.txt">SpongyCastle/BouncyCastleAllTests_1_55.txt</a>: Tests run: 95,  Failures: 27</li>
+<li><a href="BouncyCastleAllTests_1_56.txt">SpongyCastle/BouncyCastleAllTests_1_56.txt</a>: Tests run: 95,  Failures: 11</li>
+<li><a href="BouncyCastleAllTests_1_57.txt">SpongyCastle/BouncyCastleAllTests_1_57.txt</a>: Tests run: 95,  Failures: 9</li>
+<li><a href="BouncyCastleAllTests_1_58.txt">SpongyCastle/BouncyCastleAllTests_1_58.txt</a>: Tests run: 95,  Failures: 8</li>
+<li><a href="BouncyCastleAllTests_1_59.txt">SpongyCastle/BouncyCastleAllTests_1_59.txt</a>: Tests run: 95,  Failures: 8</li>
+<li><a href="ConscryptAllTests_1_0_1.txt">ConscryptAllTests_1_0_1.txt</a>: Tests run: 63,  Failures: 3</li>
+<li><a href="OpenJDKTest_jdk-10+23.txt">OpenJDKTest_jdk-10+23.txt</a>: Tests run: 95,  Failures: 33</li>
+<li><a href="OpenJDKTest_jdk8u141-b15.txt">OpenJDKTest_jdk8u141-b15.txt</a>: Tests run: 95,  Failures: 34</li>
+<li><a href="OpenJDKTest_jdk8u144-b01.txt">OpenJDKTest_jdk8u144-b01.txt</a>: Tests run: 95,  Failures: 34</li>
+<li><a href="OpenJDKTest_jdk8u152-b01.txt">OpenJDKTest_jdk8u152-b01.txt</a>: Tests run: 95,  Failures: 34</li>
+<li><a href="OpenJDKTest_jdk8u152-b02.txt">OpenJDKTest_jdk8u152-b02.txt</a>: Tests run: 95,  Failures: 36</li>
+<li><a href="OpenJDKTest_jdk8u152-b03.txt">OpenJDKTest_jdk8u152-b03.txt</a>: Tests run: 95,  Failures: 36</li>
+<li><a href="OpenJDKTest_jdk8u152-b04.txt">OpenJDKTest_jdk8u152-b04.txt</a>: Tests run: 95,  Failures: 36</li>
+<li><a href="OpenJDKTest_jdk8u162-b00.txt">OpenJDKTest_jdk8u162-b00.txt</a>: Tests run: 95,  Failures: 36</li>
+<li><a href="OpenJDKTest_jdk-9+181.txt">OpenJDKTest_jdk-9+181.txt</a>: Tests run: 95,  Failures: 38</li>
+<li><a href="OpenJDKTest_zulu10.1+11-jdk10-linux_x64.txt">OpenJDKTest_zulu10.1+11-jdk10-linux_x64.txt</a>: Tests run: 95,  Failures: 32</li>
+<li><a href="OpenJDKTest_zulu6.17.0.1-jdk6.0.97-linux_x64.txt">OpenJDKTest_zulu6.17.0.1-jdk6.0.97-linux_x64.txt</a>: </li>
+<li><a href="OpenJDKTest_zulu6.18.0.3-jdk6.0.99-linux_x64.txt">OpenJDKTest_zulu6.18.0.3-jdk6.0.99-linux_x64.txt</a>: </li>
+<li><a href="OpenJDKTest_zulu6.19.0.1-jdk6.0.103-linux_x64.txt">OpenJDKTest_zulu6.19.0.1-jdk6.0.103-linux_x64.txt</a>: </li>
+<li><a href="OpenJDKTest_zulu7.21.0.3-jdk7.0.161-linux_x64.txt">OpenJDKTest_zulu7.21.0.3-jdk7.0.161-linux_x64.txt</a>: </li>
+<li><a href="OpenJDKTest_zulu7.22.0.3-jdk7.0.171-linux_x64.txt">OpenJDKTest_zulu7.22.0.3-jdk7.0.171-linux_x64.txt</a>: </li>
+<li><a href="OpenJDKTest_zulu8.25.0.1-jdk8.0.152-linux_x64.txt">OpenJDKTest_zulu8.25.0.1-jdk8.0.152-linux_x64.txt</a>: Tests run: 95,  Failures: 34</li>
+<li><a href="OpenJDKTest_zulu8.25.0.3-jdk8.0.153-linux_i686.txt">OpenJDKTest_zulu8.25.0.3-jdk8.0.153-linux_i686.txt</a>: Tests run: 95,  Failures: 34</li>
+<li><a href="OpenJDKTest_zulu8.27.0.7-jdk8.0.162-linux_x64.txt">OpenJDKTest_zulu8.27.0.7-jdk8.0.162-linux_x64.txt</a>: Tests run: 95,  Failures: 27</li>
+<li><a href="OpenJDKTest_zulu9.0.0.15-jdk9.0.0-linux_x64.txt">OpenJDKTest_zulu9.0.0.15-jdk9.0.0-linux_x64.txt</a>: Tests run: 95,  Failures: 38</li>
+<li><a href="OpenJDKTest_zulu9.0.1.3-jdk9.0.1-linux_i686.txt">OpenJDKTest_zulu9.0.1.3-jdk9.0.1-linux_i686.txt</a>: Tests run: 95,  Failures: 38</li>
+<li><a href="OpenJDKTest_zulu9.0.4.1-jdk9.0.4-linux_x64.txt">OpenJDKTest_zulu9.0.4.1-jdk9.0.4-linux_x64.txt</a>: Tests run: 95,  Failures: 37</li>
+</ul></body></html>
