Testlogs auto-pushed to gh-pages

--- a/testlogs/index.html
+++ b/testlogs/index.html
@@ -1,18 +1,5 @@
-<html><body><ul>
-<li><a href="BouncyCastleAllTests_1_49.txt">SpongyCastle/BouncyCastleAllTests_1_49.txt</a>: Tests run: 95,  Failures: 16</li>
-<li><a href="BouncyCastleAllTests_1_50.txt">SpongyCastle/BouncyCastleAllTests_1_50.txt</a>: Tests run: 95,  Failures: 25</li>
-<li><a href="BouncyCastleAllTests_1_51.txt">SpongyCastle/BouncyCastleAllTests_1_51.txt</a>: Tests run: 95,  Failures: 24</li>
-<li><a href="BouncyCastleAllTests_1_52.txt">SpongyCastle/BouncyCastleAllTests_1_52.txt</a>: Tests run: 95,  Failures: 25</li>
-<li><a href="BouncyCastleAllTests_1_53.txt">SpongyCastle/BouncyCastleAllTests_1_53.txt</a>: Tests run: 95,  Failures: 25</li>
-<li><a href="BouncyCastleAllTests_1_54.txt">SpongyCastle/BouncyCastleAllTests_1_54.txt</a>: Tests run: 95,  Failures: 26</li>
-<li><a href="BouncyCastleAllTests_1_55.txt">SpongyCastle/BouncyCastleAllTests_1_55.txt</a>: Tests run: 95,  Failures: 27</li>
-<li><a href="BouncyCastleAllTests_1_56.txt">SpongyCastle/BouncyCastleAllTests_1_56.txt</a>: Tests run: 95,  Failures: 11</li>
-<li><a href="BouncyCastleAllTests_1_57.txt">SpongyCastle/BouncyCastleAllTests_1_57.txt</a>: Tests run: 95,  Failures: 9</li>
-<li><a href="BouncyCastleAllTests_1_58.txt">SpongyCastle/BouncyCastleAllTests_1_58.txt</a>: Tests run: 95,  Failures: 8</li>
-<li><a href="BouncyCastleAllTests_1_59.txt">SpongyCastle/BouncyCastleAllTests_1_59.txt</a>: Tests run: 95,  Failures: 8</li>
-<li><a href="ConscryptAllTests_1_0_1.txt">ConscryptAllTests_1_0_1.txt</a>: Tests run: 63,  Failures: 3</li>
-</ul></body></html>
-<html><body><ul>
+<html><body>i<p>Last update: Sat Apr  7 20:13:59 EDT 2018</p>
+<p><ul>
 <li><a href="BouncyCastleAllTests_1_49.txt">SpongyCastle/BouncyCastleAllTests_1_49.txt</a>: Tests run: 95,  Failures: 16</li>
 <li><a href="BouncyCastleAllTests_1_50.txt">SpongyCastle/BouncyCastleAllTests_1_50.txt</a>: Tests run: 95,  Failures: 25</li>
 <li><a href="BouncyCastleAllTests_1_51.txt">SpongyCastle/BouncyCastleAllTests_1_51.txt</a>: Tests run: 95,  Failures: 24</li>
@@ -46,4 +33,4 @@
 <li><a href="OpenJDKTest_zulu9.0.0.15-jdk9.0.0-linux_x64.txt">OpenJDKTest_zulu9.0.0.15-jdk9.0.0-linux_x64.txt</a>: Tests run: 95,  Failures: 38</li>
 <li><a href="OpenJDKTest_zulu9.0.1.3-jdk9.0.1-linux_i686.txt">OpenJDKTest_zulu9.0.1.3-jdk9.0.1-linux_i686.txt</a>: Tests run: 95,  Failures: 38</li>
 <li><a href="OpenJDKTest_zulu9.0.4.1-jdk9.0.4-linux_x64.txt">OpenJDKTest_zulu9.0.4.1-jdk9.0.4-linux_x64.txt</a>: Tests run: 95,  Failures: 37</li>
-</ul></body></html>
+</ul></p></body></html>
