--- a/testlogs/index.html
+++ b/testlogs/index.html
@@ -1,4 +1,4 @@
-<html><body>i<p>Last update: Sat Apr  7 20:13:59 EDT 2018</p>
+<html><body><p>Last update: Sat Apr  7 20:16:07 EDT 2018</p>
 <p><ul>
 <li><a href="BouncyCastleAllTests_1_49.txt">SpongyCastle/BouncyCastleAllTests_1_49.txt</a>: Tests run: 95,  Failures: 16</li>
 <li><a href="BouncyCastleAllTests_1_50.txt">SpongyCastle/BouncyCastleAllTests_1_50.txt</a>: Tests run: 95,  Failures: 25</li>
@@ -22,9 +22,6 @@
 <li><a href="OpenJDKTest_jdk8u162-b00.txt">OpenJDKTest_jdk8u162-b00.txt</a>: Tests run: 95,  Failures: 36</li>
 <li><a href="OpenJDKTest_jdk-9+181.txt">OpenJDKTest_jdk-9+181.txt</a>: Tests run: 95,  Failures: 38</li>
 <li><a href="OpenJDKTest_zulu10.1+11-jdk10-linux_x64.txt">OpenJDKTest_zulu10.1+11-jdk10-linux_x64.txt</a>: Tests run: 95,  Failures: 32</li>
-<li><a href="OpenJDKTest_zulu6.17.0.1-jdk6.0.97-linux_x64.txt">OpenJDKTest_zulu6.17.0.1-jdk6.0.97-linux_x64.txt</a>: </li>
-<li><a href="OpenJDKTest_zulu6.18.0.3-jdk6.0.99-linux_x64.txt">OpenJDKTest_zulu6.18.0.3-jdk6.0.99-linux_x64.txt</a>: </li>
-<li><a href="OpenJDKTest_zulu6.19.0.1-jdk6.0.103-linux_x64.txt">OpenJDKTest_zulu6.19.0.1-jdk6.0.103-linux_x64.txt</a>: </li>
 <li><a href="OpenJDKTest_zulu7.21.0.3-jdk7.0.161-linux_x64.txt">OpenJDKTest_zulu7.21.0.3-jdk7.0.161-linux_x64.txt</a>: </li>
 <li><a href="OpenJDKTest_zulu7.22.0.3-jdk7.0.171-linux_x64.txt">OpenJDKTest_zulu7.22.0.3-jdk7.0.171-linux_x64.txt</a>: </li>
 <li><a href="OpenJDKTest_zulu8.25.0.1-jdk8.0.152-linux_x64.txt">OpenJDKTest_zulu8.25.0.1-jdk8.0.152-linux_x64.txt</a>: Tests run: 95,  Failures: 34</li>
