Clean up invalid JSCompiler namespaces.
Valid namespaces are a dot-separated sequence of legal JS property names.

This CL prepares for cl/343185213 which enforces the namespace structure.

NOKEYCHECK=True
PiperOrigin-RevId: 343903902

--- a/javascript/webcryptoapi/WebCryptoAllTest.html
+++ b/javascript/webcryptoapi/WebCryptoAllTest.html
@@ -19,11 +19,11 @@
 <script src="../../webcrypto_test_deps-runfiles.js"></script>
 <script>
   goog.require('wycheproof.webcryptoapi');
-  goog.require('wycheproof.webcryptoapi.AES-GCM');
+  goog.require('wycheproof.webcryptoapi.AES_GCM');
   goog.require('wycheproof.webcryptoapi.ECDSA');
   goog.require('wycheproof.webcryptoapi.ECDH');
-  goog.require('wycheproof.webcryptoapi.RSA-OAED');
-  goog.require('wycheproof.webcryptoapi.RSASSA-PKCS1-V1_5');
+  goog.require('wycheproof.webcryptoapi.RSA_OAED');
+  goog.require('wycheproof.webcryptoapi.RSASSA_PKCS1_V1_5');
 </script>
 <script>
 function setUpPage(){
