--- a/javascript/webcryptoapi/WebCryptoPresubmitTest.html
+++ b/javascript/webcryptoapi/WebCryptoPresubmitTest.html
@@ -19,11 +19,11 @@
 <script src="../../webcrypto_test_deps-runfiles.js"></script>
 <script>
   goog.require('wycheproof.webcryptoapi');
-  goog.require('wycheproof.webcryptoapi.AES-GCM');
+  goog.require('wycheproof.webcryptoapi.AES_GCM');
   goog.require('wycheproof.webcryptoapi.ECDSA');
   goog.require('wycheproof.webcryptoapi.ECDH');
-  goog.require('wycheproof.webcryptoapi.RSA-OAED');
-  goog.require('wycheproof.webcryptoapi.RSASSA-PKCS1-V1_5');
+  goog.require('wycheproof.webcryptoapi.RSA_OAED');
+  goog.require('wycheproof.webcryptoapi.RSASSA_PKCS1_V1_5');
 </script>
 <script>
 function setUpPage(){
